--- a/Demo20181130.ipynb
+++ b/Demo20181130.ipynb
@@ -2864,6 +2864,226 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 241,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['【狗仔偷拍】小嫻搬離何守正家租66坪房\\u3000月租6萬元', '許聖梅心疼小嫻被當空氣\\u3000爆何守正「有兩個女學員」',\n",
+       "       '【動畫解盤】毒菇跳火線譙seafood\\u3000小嫻難瘦香菇', '【獨家】小嫻賣房求子\\u3000婆婆竟拒入籍何家',\n",
+       "       '小心！在美結婚台灣沒登記\\u3000偷腥照樣能捉姦', '小嫻離婚導火線\\u3000拉何守正信妙禪',\n",
+       "       '小嫻守正結婚在台沒登記\\u3000想離婚只有兩條路', '小嫻何守正想離婚\\u3000必須先做這件事！',\n",
+       "       '【內幕動畫】小嫻婚變何守正姊反擊\\u3000不滿媽煮飯侍奉星媳婦', '小嫻婚變無徵兆\\u3000男星嘆：兩人向來出雙入對',\n",
+       "       '【獨家內幕】太傷！小嫻被分手\\u3000何守正當小三面前攤牌',\n",
+       "       '【小嫻離婚】何守正稱沒有遺憾\\u3000人妻女星超火「一嘴屁話」',\n",
+       "       '【小嫻離婚】3大退讓人財兩失\\u3000求子花光430萬積蓄'], dtype='<U36')"
+      ]
+     },
+     "execution_count": 241,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "titles_ary[cluster_ary == 70]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 243,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<899x38653 sparse matrix of type '<class 'numpy.int64'>'\n",
+       "\twith 128155 stored elements in Compressed Sparse Row format>"
+      ]
+     },
+     "execution_count": 243,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 247,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "m2 = X[cluster_ary == 70].sum(axis = 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 250,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arr = np.squeeze(np.asarray(m2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 254,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['小嫻', '何守', '離婚', '結婚', '美國', '何家', '表示', '時間', '台灣', '婚姻'],\n",
+       "      dtype='<U18')"
+      ]
+     },
+     "execution_count": 254,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "features = np.array(vectorizer.get_feature_names())\n",
+    "features[arr.argsort()[::-1][0:10]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 256,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "第3群\n",
+      "新聞關鍵字：全能,神教,中國,宗教,宗教自由,組織,遭受,一個,迫害,研究\n",
+      "【特企】NGO聯名譴責中共迫害宗教信仰\n",
+      "【特企】NGO聯名譴責中共迫害宗教信仰\n",
+      "【特企】NGO聯名譴責中共迫害宗教信仰\n",
+      "【特企】NGO聯名譴責中共迫害宗教信仰\n",
+      "【特企】NGO聯名譴責中共迫害宗教信仰\n",
+      "【特企】NGO聯名譴責中共迫害宗教信仰\n",
+      "【特企】NGO聯名譴責中共迫害宗教信仰\n",
+      "【特企】NGO聯名譴責中共迫害宗教信仰\n",
+      "【特企】NGO聯名譴責中共迫害宗教信仰\n",
+      "【特企】NGO聯名譴責中共迫害宗教信仰\n",
+      "【特企】NGO聯名譴責中共迫害宗教信仰\n",
+      "【特企】NGO聯名譴責中共迫害宗教信仰\n",
+      "【特企】NGO聯名譴責中共迫害宗教信仰\n",
+      "【特企】NGO聯名譴責中共迫害宗教信仰\n",
+      "【特企】NGO聯名譴責中共迫害宗教信仰\n",
+      "【特企】NGO聯名譴責中共迫害宗教信仰\n",
+      "【特企】NGO聯名譴責中共迫害宗教信仰\n",
+      "【特企】NGO聯名譴責中共迫害宗教信仰\n",
+      "【特企】NGO聯名譴責中共迫害宗教信仰\n",
+      "【特企】NGO聯名譴責中共迫害宗教信仰\n",
+      "【特企】NGO聯名譴責中共迫害宗教信仰\n",
+      "【特企】NGO聯名譴責中共迫害宗教信仰\n",
+      "【特企】NGO聯名譴責中共迫害宗教信仰\n",
+      "【特企】NGO聯名譴責中共迫害宗教信仰\n",
+      "【特企】NGO聯名譴責中共迫害宗教信仰\n",
+      "【特企】NGO聯名譴責中共迫害宗教信仰\n",
+      "【特企】NGO聯名譴責中共迫害宗教信仰\n",
+      "【特企】NGO聯名譴責中共迫害宗教信仰\n",
+      "【特企】NGO聯名譴責中共迫害宗教信仰\n",
+      "【特企】NGO聯名譴責中共迫害宗教信仰\n",
+      "===========================\n",
+      "第70群\n",
+      "新聞關鍵字：小嫻,何守,離婚,結婚,美國,何家,表示,時間,台灣,婚姻\n",
+      "【狗仔偷拍】小嫻搬離何守正家租66坪房　月租6萬元\n",
+      "許聖梅心疼小嫻被當空氣　爆何守正「有兩個女學員」\n",
+      "【動畫解盤】毒菇跳火線譙seafood　小嫻難瘦香菇\n",
+      "【獨家】小嫻賣房求子　婆婆竟拒入籍何家\n",
+      "小心！在美結婚台灣沒登記　偷腥照樣能捉姦\n",
+      "小嫻離婚導火線　拉何守正信妙禪\n",
+      "小嫻守正結婚在台沒登記　想離婚只有兩條路\n",
+      "小嫻何守正想離婚　必須先做這件事！\n",
+      "【內幕動畫】小嫻婚變何守正姊反擊　不滿媽煮飯侍奉星媳婦\n",
+      "小嫻婚變無徵兆　男星嘆：兩人向來出雙入對\n",
+      "【獨家內幕】太傷！小嫻被分手　何守正當小三面前攤牌\n",
+      "【小嫻離婚】何守正稱沒有遺憾　人妻女星超火「一嘴屁話」\n",
+      "【小嫻離婚】3大退讓人財兩失　求子花光430萬積蓄\n",
+      "===========================\n",
+      "第114群\n",
+      "新聞關鍵字：專頁,影片,ig,網友,分享,cuteanimalsco,果粉,內容,絲團,圖片\n",
+      "驚！　野生捕獲恐龍遛汪星人\n",
+      "驚！　野生捕獲恐龍遛汪星人\n",
+      "搔癢無尾熊 表情超enjoy\n",
+      "【笑翻片】各種抓！動物止癢出奇招\n",
+      "【保護片】就是不能下水！狗狗護小主人\n",
+      "群狗亂舞開趴　畫面太「美」讓人不敢看\n",
+      "超近看螞蟻食蜂蜜　竟感到療癒？\n",
+      "===========================\n",
+      "第201群\n",
+      "新聞關鍵字：補助,台電,申請,立委,顏寬恒,一手,經費,萬元,報導,電申\n",
+      "被爆罵、敲台電　顏寬恒「模糊反空污焦點」\n",
+      "【反嗆片】被爆向台電申請補助又罵空污　顏寬恒：不會拿人手短\n",
+      "「一手罵台電、一手敲台電」　經委會要台電公布立委補助資料\n",
+      "被顏寬恒點名也跟台電要補助　蔡其昌：不應與空污混為一談\n",
+      "===========================\n",
+      "第341群\n",
+      "新聞關鍵字：京華城,560,市府,計畫,容積率,都市,察院,積率,發局,提出\n",
+      "【壹週刊】百億貸款將到期　柯P放容積解套京華城\n",
+      "560%容積爭議　威京：只是拿回應有的\n",
+      "京華城容積率增至560%案　北市都發局同意、待都委會審議\n",
+      "及時雨！柯文哲放寬容積　京華城爽納百億\n",
+      "===========================\n",
+      "第17群\n",
+      "新聞關鍵字：桃園,宿舍,失聯,汽車,工廠,火勢,矽卡,現場,逃出,員工\n",
+      "【不斷更新】桃園工廠惡火撲滅 6人仍失聯宿舍內發現一堆白骨\n",
+      "桃園工廠火勢熄滅　員工宿舍內發現一堆白骨\n",
+      "汽車用品大廠「矽卡」燒毀　資本額達2億\n",
+      "===========================\n",
+      "第45群\n",
+      "新聞關鍵字：地區,北部,氣象局,高溫,影響,水氣,中南部,半部,玉山,山區\n",
+      "後天入冬最強冷空氣來襲　低溫下探12℃\n",
+      "像灑了糖霜！玉山今晨降雪　積雪0.5公分\n",
+      "輕颱啟德恐生成　入冬最強冷空氣周末來襲下探11℃（動畫）\n",
+      "===========================\n",
+      "第185群\n",
+      "新聞關鍵字：天堂,遊戲,玩家,伺服器,橘子,開服,下載,12,上線,網友\n",
+      "【崩潰動畫】《天堂M》斷線50次　玩家罵聲連連\n",
+      "台戰豪砸40萬抽寶一場空　怒批《天堂M》根本錢坑\n",
+      "《天堂M》超過116萬人登入　50個伺服器仍塞到爆\n",
+      "===========================\n",
+      "第246群\n",
+      "新聞關鍵字：px,高雄,font,text,000000,height,銀行,12,表示,line\n",
+      "【世界一瞬間】日本扭蛋風潮\n",
+      "曾銘宗爆「好大的高雄銀」　高雄銀嗆：保留法律追訴權\n",
+      "黃國昌爆高雄銀替慶富不實增資　公司：非事實\n",
+      "===========================\n",
+      "第524群\n",
+      "新聞關鍵字：三中,建新,中投,公司,報導,張哲琛,集團,錄音,英九,檢方\n",
+      "三中案馬英九圖利中時老闆？　北檢：不評論\n",
+      "三中案祕錄光碟！恐扳倒馬英九　當年他錄的\n",
+      "三中案500萬禮盒照　馬英九一句話成關鍵\n",
+      "===========================\n"
+     ]
+    }
+   ],
+   "source": [
+    "from collections import Counter\n",
+    "c = Counter(cluster_ary)\n",
+    "\n",
+    "for group, cnt in c.most_common(10):\n",
+    "    print('第{}群'.format(group))\n",
+    "    articles = titles_ary[cluster_ary == group]\n",
+    "    m2 = X[cluster_ary == group].sum(axis = 0)\n",
+    "    arr = np.squeeze(np.asarray(m2))\n",
+    "    features = np.array(vectorizer.get_feature_names())\n",
+    "    keywords = features[arr.argsort()[::-1][0:10]]\n",
+    "    print('新聞關鍵字：{}'.format(','.join(keywords)))\n",
+    "    for news in articles:\n",
+    "        print(news)\n",
+    "    print('===========================')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
