--- a/Demo20181130.ipynb
+++ b/Demo20181130.ipynb
@@ -3083,6 +3083,406 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 文章分類"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 259,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas\n",
+    "news = pandas.read_excel('https://raw.githubusercontent.com/ywchiu/ctbc/master/data/20171214news.xlsx')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 262,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "corpus = []\n",
+    "titles = []\n",
+    "tags   = []\n",
+    "for rec in news[news['category'].isin(['娛樂','社會'])].iterrows():\n",
+    "    corpus.append(' '.join(jieba.cut(rec[1]['content'])))\n",
+    "    titles.append(rec[1]['title'])\n",
+    "    tags.append(rec[1]['category'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 263,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "vectorizer = CountVectorizer()\n",
+    "X = vectorizer.fit_transform(corpus)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 264,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<247x13883 sparse matrix of type '<class 'numpy.int64'>'\n",
+       "\twith 32161 stored elements in Compressed Sparse Row format>"
+      ]
+     },
+     "execution_count": 264,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 269,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.cross_validation import train_test_split\n",
+    "train_data, test_data, train_title, test_title, train_tag, test_tag =train_test_split(X, titles, tags, test_size = 0.3, random_state= 42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 270,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(172, 13883)"
+      ]
+     },
+     "execution_count": 270,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_data.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 271,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(75, 13883)"
+      ]
+     },
+     "execution_count": 271,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_data.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 273,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#train_tag"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 274,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "MultinomialNB(alpha=0.01, class_prior=None, fit_prior=True)"
+      ]
+     },
+     "execution_count": 274,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.naive_bayes import MultinomialNB\n",
+    "\n",
+    "clf = MultinomialNB(alpha=0.01)\n",
+    "clf.fit(train_data,train_tag)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 276,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predicted = clf.predict(test_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 279,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9866666666666667"
+      ]
+     },
+     "execution_count": 279,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sum(test_tag == predicted) / len(test_tag)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 282,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['娛樂' '社會']\n",
+      "[[32  0]\n",
+      " [ 1 42]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import confusion_matrix\n",
+    "print(clf.classes_)\n",
+    "m = confusion_matrix(test_tag, predicted)\n",
+    "print(m)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 285,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['【K律師論點】離婚＝失敗？\\u3000K律師這麼說'], dtype='<U36')"
+      ]
+     },
+     "execution_count": 285,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np_titles = np.array(test_title)\n",
+    "np_titles[test_tag!= predicted]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 292,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "s = pickle.dumps(clf)\n",
+    "with open('model.pkl', 'wb') as f:\n",
+    "    f.write(s)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 293,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clf2 = pickle.loads(open('model.pkl', 'rb').read())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 295,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#clf2.predict(test_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 296,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "article = '''\n",
+    "5566成員孫協志、王仁甫、許孟哲三人合體，將在明年2月23日攻蛋，昔日戰友王少偉卻缺席這場盛會，今售票記者會，5566再度被問起究竟有何過不去的嫌隙或是心結，讓別具意義的攻蛋演唱會沒了王少偉？王仁甫表示，「我自己也覺得有點遺憾，如果能四人最好。但看王少偉本身啦，看他的意願。」私下都未主動邀王少偉？三人異同口聲表示，主辦單位沒邀, 演唱會一開始就設定是找節目《飢餓遊戲》的主持人，但也坦承私下確實未主動邀王少偉，孫協志則稱「大家是十多年的兄弟，沒有存在心結問題，人到一個年紀，基本上有自己的想法，做法，抱持一個尊重的態度，你想這麼做，盡可能尊重。」\n",
+    "'''\n",
+    "new_corpus = ' '.join(jieba.cut(article))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 298,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X2 = vectorizer.transform([new_corpus])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 299,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<1x13883 sparse matrix of type '<class 'numpy.int64'>'\n",
+       "\twith 47 stored elements in Compressed Sparse Row format>"
+      ]
+     },
+     "execution_count": 299,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 300,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['娛樂'], dtype='<U2')"
+      ]
+     },
+     "execution_count": 300,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "clf2.predict(X2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 301,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(64.0, '男子', 0.0, 64.0)\n",
+      "(38.0, '突發', 0.0, 38.0)\n",
+      "(34.0, '機車', 0.0, 34.0)\n",
+      "(32.0, '警員', 0.0, 32.0)\n",
+      "(31.0, '法官', 0.0, 31.0)\n",
+      "(30.2, '警方', 4.0, 151.0)\n",
+      "(30.0, '少年', 0.0, 30.0)\n",
+      "(30.0, '派出所', 0.0, 30.0)\n",
+      "(29.0, '進行', 0.0, 29.0)\n",
+      "(25.0, '女友', 0.0, 25.0)\n",
+      "(25.0, '新北', 0.0, 25.0)\n",
+      "(24.0, '分局', 0.0, 24.0)\n",
+      "(24.0, '警察', 0.0, 24.0)\n",
+      "(23.0, '審團', 0.0, 23.0)\n",
+      "(23.0, '時許', 0.0, 23.0)\n",
+      "(23.0, '消防局', 0.0, 23.0)\n",
+      "(22.0, '包商', 0.0, 22.0)\n",
+      "(22.0, '報警', 0.0, 22.0)\n",
+      "(22.0, '專線', 0.0, 22.0)\n",
+      "(22.0, '被告', 0.0, 22.0)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import operator\n",
+    "coef_features_c1_c2 = []\n",
+    "\n",
+    "for index, features in enumerate(zip(vectorizer.get_feature_names(), \\\n",
+    "                        clf.feature_count_[0], clf.feature_count_[1])):\n",
+    "    feat,c1,c2 = features\n",
+    "    coef_features_c1_c2.append(tuple([c2/(c1 + 1), feat, c1, c2]))\n",
+    "\n",
+    "for i in sorted(coef_features_c1_c2, key = operator.itemgetter(0), reverse=True)[0:20]:\n",
+    "    print(i)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 302,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(25.75, '小嫻', 103.0, 3.0)\n",
+      "(21.0, '演出', 21.0, 0.0)\n",
+      "(19.0, '何家', 19.0, 0.0)\n",
+      "(15.0, '女星', 15.0, 0.0)\n",
+      "(13.0, '最佳', 13.0, 0.0)\n",
+      "(12.5, '婆婆', 25.0, 1.0)\n",
+      "(12.0, '明年', 12.0, 0.0)\n",
+      "(12.0, '節目', 12.0, 0.0)\n",
+      "(12.0, '電影', 12.0, 0.0)\n",
+      "(11.0, '信妙', 11.0, 0.0)\n",
+      "(11.0, '娛樂', 11.0, 0.0)\n",
+      "(11.0, '巴黎', 11.0, 0.0)\n",
+      "(10.0, '101', 10.0, 0.0)\n",
+      "(10.0, '何守', 80.0, 7.0)\n",
+      "(9.0, '不同', 9.0, 0.0)\n",
+      "(9.0, '妙禪', 9.0, 0.0)\n",
+      "(9.0, '媳婦', 9.0, 0.0)\n",
+      "(9.0, '毒菇', 9.0, 0.0)\n",
+      "(9.0, '法國', 9.0, 0.0)\n",
+      "(8.666666666666666, '婚變', 26.0, 2.0)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import operator\n",
+    "coef_features_c1_c2 = []\n",
+    "\n",
+    "for index, features in enumerate(zip(vectorizer.get_feature_names(), \\\n",
+    "                        clf.feature_count_[0], clf.feature_count_[1])):\n",
+    "    feat,c1,c2 = features\n",
+    "    coef_features_c1_c2.append(tuple([c1/(c2 + 1), feat, c1, c2]))\n",
+    "\n",
+    "for i in sorted(coef_features_c1_c2, key = operator.itemgetter(0), reverse=True)[0:20]:\n",
+    "    print(i)\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
