--- a/Demo20181130.ipynb
+++ b/Demo20181130.ipynb
@@ -3483,6 +3483,75 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 抓取電影評論"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 303,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests\n",
+    "res = requests.get('https://movies.yahoo.com.tw/movieinfo_review.html/id=8136')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 305,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from bs4 import BeautifulSoup\n",
+    "soup = BeautifulSoup(res.text, 'lxml')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 313,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "喜歡女主角的智慧，雖然說現實生活不太可能遇到這種男人啊😂\n",
+      "============================\n",
+      "還可以 蠻好笑 東西文化的差異\r\n",
+      "看了特別有感覺\n",
+      "============================\n",
+      "後面還蠻感人的,蠻多經典中文老歌也出現\n",
+      "============================\n",
+      "電影場面的設計很用心，配樂很棒!很適合\"女生\"對愛情劇飲上來時消遣看，時不時讓人會心微笑。\r\n",
+      "劇情上比較精彩的部分是，後半段女主角與未來婆婆\"兩人\"的人生哲學與處事方法都非常令人敬佩，也是這部片最感人之處。\r\n",
+      "ps.男生應該不會想看這部，女生會想看，但不一定要看電影，在家看就可以了。\n",
+      "============================\n",
+      "很好看！女主角的EQ很高，最後很感人！\n",
+      "============================\n",
+      "難得一見的好萊塢模式，華裔＆亞裔演員們，齊聚一堂，簡單的內容，大大的驚喜笑料感動，真值得。期待第二部曲以及第三部曲到來。\n",
+      "============================\n",
+      "可笑的大爛片....低俗的內容，工讀生灌票太好笑了！\n",
+      "============================\n",
+      "如果你看到這條簡訊那說明我們有緣分\n",
+      "============================\n",
+      "不錯看～～～～～～朋友很喜歡～～～～\n",
+      "============================\n",
+      "大推，罕見的好萊塢電影都是華人演員，劇情也是一般觀眾會喜歡的！\n",
+      "============================\n"
+     ]
+    }
+   ],
+   "source": [
+    "for rec in soup.select('#form_good1'):\n",
+    "    comments = rec.select('span')[-1].text\n",
+    "    scores = rec.select_one('input[name=\"score\"]').get('value')\n",
+    "    print('============================')"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
