--- a/Demo20181130.ipynb
+++ b/Demo20181130.ipynb
@@ -3511,44 +3511,381 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 313,
+   "execution_count": 314,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "movie_reviews = []\n",
+    "for rec in soup.select('#form_good1'):\n",
+    "    comments = rec.select('span')[-1].text\n",
+    "    scores   = rec.select_one('input[name=\"score\"]').get('value')\n",
+    "    movie_reviews.append({'scores':scores, 'comments':comments})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 316,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "moviedf = pandas.DataFrame(movie_reviews)\n",
+    "#moviedf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 317,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "moviedf = pandas.read_excel('https://raw.githubusercontent.com/ywchiu/ctbc/master/data/yahoo_movie.xlsx')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 319,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "content    1112\n",
+       "stars      1112\n",
+       "title      1112\n",
+       "status     1112\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 319,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "moviedf.count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 330,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "corpus = []\n",
+    "tags   = []\n",
+    "for rec in moviedf[moviedf['status'].isin(['good', 'bad'])].iterrows():\n",
+    "    corpus.append(' '.join(jieba.cut(rec[1]['content'])))\n",
+    "    tags.append(rec[1]['status'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 331,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "vectorizer = CountVectorizer()\n",
+    "X = vectorizer.fit_transform(corpus)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 332,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<980x5900 sparse matrix of type '<class 'numpy.int64'>'\n",
+       "\twith 16897 stored elements in Compressed Sparse Row format>"
+      ]
+     },
+     "execution_count": 332,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 333,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "train_X, test_X, train_y, test_y = train_test_split(X, tags, test_size = 0.3, random_state = 42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 334,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "MultinomialNB(alpha=0.01, class_prior=None, fit_prior=True)"
+      ]
+     },
+     "execution_count": 334,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.naive_bayes import MultinomialNB\n",
+    "clf = MultinomialNB(alpha = 0.01)\n",
+    "clf.fit(train_X, train_y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 335,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predicted = clf.predict(test_X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 336,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7517006802721088"
+      ]
+     },
+     "execution_count": 336,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import accuracy_score, confusion_matrix\n",
+    "accuracy_score(test_y, predicted)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 338,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "喜歡女主角的智慧，雖然說現實生活不太可能遇到這種男人啊😂\n",
-      "============================\n",
-      "還可以 蠻好笑 東西文化的差異\r\n",
-      "看了特別有感覺\n",
-      "============================\n",
-      "後面還蠻感人的,蠻多經典中文老歌也出現\n",
-      "============================\n",
-      "電影場面的設計很用心，配樂很棒!很適合\"女生\"對愛情劇飲上來時消遣看，時不時讓人會心微笑。\r\n",
-      "劇情上比較精彩的部分是，後半段女主角與未來婆婆\"兩人\"的人生哲學與處事方法都非常令人敬佩，也是這部片最感人之處。\r\n",
-      "ps.男生應該不會想看這部，女生會想看，但不一定要看電影，在家看就可以了。\n",
-      "============================\n",
-      "很好看！女主角的EQ很高，最後很感人！\n",
-      "============================\n",
-      "難得一見的好萊塢模式，華裔＆亞裔演員們，齊聚一堂，簡單的內容，大大的驚喜笑料感動，真值得。期待第二部曲以及第三部曲到來。\n",
-      "============================\n",
-      "可笑的大爛片....低俗的內容，工讀生灌票太好笑了！\n",
-      "============================\n",
-      "如果你看到這條簡訊那說明我們有緣分\n",
-      "============================\n",
-      "不錯看～～～～～～朋友很喜歡～～～～\n",
-      "============================\n",
-      "大推，罕見的好萊塢電影都是華人演員，劇情也是一般觀眾會喜歡的！\n",
-      "============================\n"
+      "['bad' 'good']\n"
      ]
     }
    ],
    "source": [
-    "for rec in soup.select('#form_good1'):\n",
-    "    comments = rec.select('span')[-1].text\n",
-    "    scores = rec.select_one('input[name=\"score\"]').get('value')\n",
-    "    print('============================')"
+    "print(clf.classes_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 337,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 87,  30],\n",
+       "       [ 43, 134]])"
+      ]
+     },
+     "execution_count": 337,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "confusion_matrix(test_y, predicted)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 340,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(15.0, '奧創', 0.0, 15.0)\n",
+      "(13.0, '希望', 0.0, 13.0)\n",
+      "(13.0, '影評', 0.0, 13.0)\n",
+      "(13.0, '當然', 0.0, 13.0)\n",
+      "(12.0, '感動', 0.0, 12.0)\n",
+      "(11.0, '相當', 0.0, 11.0)\n",
+      "(11.0, '細節', 0.0, 11.0)\n",
+      "(10.0, 'the', 0.0, 10.0)\n",
+      "(10.0, '效果', 0.0, 10.0)\n",
+      "(10.0, '還不錯', 1.0, 20.0)\n",
+      "(9.5, '不同', 1.0, 19.0)\n",
+      "(9.0, 'be', 0.0, 9.0)\n",
+      "(9.0, 'https', 0.0, 9.0)\n",
+      "(9.0, '元素', 0.0, 9.0)\n",
+      "(9.0, '鷹眼', 0.0, 9.0)\n",
+      "(8.75, '不錯', 3.0, 35.0)\n",
+      "(8.0, '之間', 0.0, 8.0)\n",
+      "(8.0, '參考', 0.0, 8.0)\n",
+      "(8.0, '大戰', 0.0, 8.0)\n",
+      "(8.0, '如此', 0.0, 8.0)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import operator\n",
+    "coef_features_c1_c2 = []\n",
+    "\n",
+    "for index, features in enumerate(zip(vectorizer.get_feature_names(), \\\n",
+    "                        clf.feature_count_[0], clf.feature_count_[1])):\n",
+    "    feat,c1,c2 = features\n",
+    "    coef_features_c1_c2.append(tuple([c2/(c1 + 1), feat, c1, c2]))\n",
+    "\n",
+    "for i in sorted(coef_features_c1_c2, key = operator.itemgetter(0), reverse=True)[0:20]:\n",
+    "    print(i)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 356,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_comment = ['聚了一堆大咖,表情都超不到位,超級冷場, 劇情超爛而且都超扯蛋,而且很多地方都交待不清,隨便虎弄帶過 ,最後也草草結尾,到底再演什麼鬼', '娛樂效果十足，超棒的演員角色，希望有續作' ]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 357,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "corpus2 = []\n",
+    "for ele in new_comment:\n",
+    "    #print(ele)\n",
+    "    corpus2.append(' '.join(jieba.cut(ele)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 358,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "s = pickle.dumps(vectorizer)\n",
+    "with open('vectorizer.pkl', 'wb') as f:\n",
+    "    f.write(s)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 359,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vectorizer2 = pickle.loads(open('vectorizer.pkl', 'rb').read())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 360,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predict_X = vectorizer2.transform(corpus2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 361,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['bad', 'good'], dtype='<U4')"
+      ]
+     },
+     "execution_count": 361,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "clf.predict(predict_X)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## SVM"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 362,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "SVC(C=1.0, cache_size=200, class_weight=None, coef0=0.0,\n",
+       "  decision_function_shape='ovr', degree=3, gamma='auto', kernel='linear',\n",
+       "  max_iter=-1, probability=False, random_state=None, shrinking=True,\n",
+       "  tol=0.001, verbose=False)"
+      ]
+     },
+     "execution_count": 362,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.svm import SVC\n",
+    "clf = SVC(kernel='linear')\n",
+    "clf.fit(train_X, train_y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 363,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predicted = clf.predict(test_X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 364,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7244897959183674"
+      ]
+     },
+     "execution_count": 364,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import accuracy_score, confusion_matrix\n",
+    "accuracy_score(test_y, predicted)"
    ]
   },
   {
