--- a/Demo20181207.ipynb
+++ b/Demo20181207.ipynb
@@ -105,6 +105,51 @@
     "rdd2 = rdd.flatMap(lambda x:[x,x+5])\n",
     "rdd2.collect()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Action"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rdd=sc.parallelize([1,2,3])\n",
+    "rdd.reduce(lambda x,y: x + y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rdd.take(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rdd.collect()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rdd=sc.parallelize([5,3,1,2]) \n",
+    "rdd.takeOrdered(3,lambda s:-1*s)"
+   ]
   }
  ],
  "metadata": {
