--- a/Demo20181207.ipynb
+++ b/Demo20181207.ipynb
@@ -150,6 +150,83 @@
     "rdd=sc.parallelize([5,3,1,2]) \n",
     "rdd.takeOrdered(3,lambda s:-1*s)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Key-Value RDD"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rdd  = sc.parallelize([(1,2), (3,4), (3,6)]) \n",
+    "rdd2 = rdd.reduceByKey(lambda a, b: a + b)\n",
+    "rdd2.collect()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rdd2 = sc.parallelize([(1,'a'), (2,'c'), (1,'b')]) \n",
+    "rdd3 = rdd2.sortByKey()\n",
+    "rdd3.collect()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rdd2 = sc.parallelize([(1,'a'), (2,'c'), (1,'b')]) \n",
+    "rdd3 = rdd2.groupByKey()\n",
+    "rdd3.collect()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Broadcast, Accumulator"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%pyspark\n",
+    "broadcastVar = sc.broadcast([1, 2, 3])\n",
+    "broadcastVar.value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%pyspark\n",
+    "accum = sc.accumulator(0) \n",
+    "rdd = sc.parallelize([1, 2, 3, 4])\n",
+    "\n",
+    "def f(x):\n",
+    "    global accum \n",
+    "    accum += x\n",
+    "    \n",
+    "rdd.foreach(f) \n",
+    "\n",
+    "accum.value"
+   ]
   }
  ],
  "metadata": {
