--- a/Demo20181207.ipynb
+++ b/Demo20181207.ipynb
@@ -227,6 +227,81 @@
     "\n",
     "accum.value"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## WordCount"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%pyspark\n",
+    "rdd = sc.textFile('/tmp/trump.txt', 4)\n",
+    "rdd2 = rdd.flatMap(lambda e: e.lower().split())\n",
+    "dict = rdd2.countByValue()\n",
+    "dict"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Movie Likes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%pyspark\n",
+    "lines = sc.textFile(\"file:///tmp/u.data\")\n",
+    "#lines.take(3)\n",
+    "movies = lines.map(lambda e: (e.split()[1],1) )\n",
+    "#movies.take(3)\n",
+    "movieCounts = movies.reduceByKey(lambda x,y: x+ y)\n",
+    "res = movieCounts.sortBy(lambda a : -a[1])\n",
+    "res.take(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%pyspark\n",
+    "\n",
+    "def loadMovieNames(): \n",
+    "    movieNames = {}\n",
+    "    with open('/tmp/u.item', 'r',encoding = 'latin1') as f:\n",
+    "        for line in f:\n",
+    "            fields = line.strip().split('|')\n",
+    "            movieNames[fields[0]] = fields[1] \n",
+    "    return movieNames\n",
+    "    \n",
+    "nameDict = sc.broadcast(loadMovieNames())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%pyspark\n",
+    "#loadMovieNames()\n",
+    "res = movieCounts.sortBy(lambda a: -a[1])\n",
+    "res2 = res.map(lambda e: (nameDict.value.get(e[0]), e[1]))\n",
+    "res2.take(10)"
+   ]
   }
  ],
  "metadata": {
