--- a/Demo20181207.ipynb
+++ b/Demo20181207.ipynb
@@ -302,6 +302,131 @@
     "res2 = res.map(lambda e: (nameDict.value.get(e[0]), e[1]))\n",
     "res2.take(10)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Spark DataFrame"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%pyspark\n",
+    "from pyspark.sql import SQLContext\n",
+    "sqlContext = SQLContext(sc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%pyspark\n",
+    "data_file = '/tmp/ratings.txt'\n",
+    "raw_data  = sc.textFile(data_file, 4)\n",
+    "raw_data.take(3)\n",
+    "\n",
+    "header = raw_data.first()\n",
+    "header\n",
+    "\n",
+    "skip_data = raw_data.filter(lambda line: line != header)\n",
+    "skip_data.take(3)\n",
+    "\n",
+    "\n",
+    "csv_data = skip_data.map(lambda l: l.split(\"::\"))\n",
+    "csv_data.take(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%pyspark\n",
+    "\n",
+    "from pyspark.sql import Row\n",
+    "row_data = csv_data.map(\n",
+    "        lambda p: \n",
+    "            Row(\n",
+    "                userid=p[0], \n",
+    "                itemid=p[1], \n",
+    "                rating=int(p[2]) \n",
+    "            )\n",
+    ")\n",
+    "row_data.take(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%pyspark\n",
+    "a = [{'userid':0, 'itemid':0, 'rating':4},\n",
+    " {'userid':0, 'itemid':1, 'rating':5}\n",
+    "]\n",
+    "# padas df\n",
+    "import pandas\n",
+    "pandas_df = pandas.DataFrame(a)\n",
+    "pandas_df\n",
+    "pandas_df[['itemid', 'rating']].groupby('itemid')['rating'].mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%pyspark\n",
+    "df = sqlContext.createDataFrame(row_data)\n",
+    "df.take(3)\n",
+    "df.show(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%pyspark\n",
+    "# select itemid, AVG(rating) from df gorup by itemid  \n",
+    "df.select(\"itemid\", \"rating\").groupBy(\"itemid\").avg().show(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%pyspark\n",
+    "\n",
+    "df.registerTempTable(\"ratings\")\n",
+    "df.printSchema()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%pyspark\n",
+    "ratings_data = sqlContext.sql(\"\"\"\n",
+    "    SELECT itemid,AVG(rating) FROM ratings GROUP BY itemid\n",
+    "\"\"\") \n",
+    "ratings_data.show(3)"
+   ]
   }
  ],
  "metadata": {
