--- a/Demo20181207.ipynb
+++ b/Demo20181207.ipynb
@@ -427,6 +427,73 @@
     "\"\"\") \n",
     "ratings_data.show(3)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Using SparkSQL to Analyze Movie Ratings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%pyspark\n",
+    "movies = sc.textFile('file:///tmp/u.item', 4)\n",
+    "movies_data = movies.map(lambda l:l.split('|')) \n",
+    "#movies_data.take(3)\n",
+    "movies_row_data = movies_data.map(lambda p:\n",
+    "    Row(movieid=p[0], moviename=p[1] ) )\n",
+    "movies_row_data.take(4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%pyspark\n",
+    "movies_df = sqlContext.createDataFrame(movies_row_data)\n",
+    "movies_df.registerTempTable(\"movies\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%pyspark\n",
+    "ratings = sc.textFile('file:///tmp/u.data', 4) \n",
+    "ratings_data = ratings.map(lambda l:l.split()) \n",
+    "ratings_row_data = ratings_data.map(lambda p:\n",
+    "    Row( userid=p[0], movieid=p[1], rating=int(p[2]) ) )\n",
+    "\n",
+    "ratings_row_data.take(4)\n",
+    "df = sqlContext.createDataFrame(ratings_row_data) \n",
+    "df.registerTempTable(\"ratings\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%pyspark\n",
+    "\n",
+    "best_movies = sqlContext.sql(\"\"\"\n",
+    "SELECT moviename,avg(rating) as avg_rating, count(1) as cnt \n",
+    "FROM movies INNER JOIN ratings ON ratings.movieid = movies.movieid \n",
+    "GROUP BY moviename \n",
+    "ORDER by cnt DESC LIMIT 10\n",
+    "\"\"\") \n",
+    "best_movies.show(5)"
+   ]
   }
  ],
  "metadata": {
